2003-03-07  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in (usage): New options `-m' and `-d'.
	(Exporter): New class varialbes @@mhc_category_name and
	(Exporter): @@additional_category = false.
	(Exporter.setup_ol_appointments): Append `MHC-sch' category to
	Outlook appointments and tasks.
	(Exporter.setup_ol_appointments): Improve the condition to save an
	Outlook appointment. Thanks to sakura@tennodai.com.
	(Exporter.setup_ol_appointments): Improve the derivation of
	task.DueDate.  Thanks to sakura@tennodai.com.
	(Exporter.delete_ol_schedules): Support `-d' option.
	(Exporter.set_flag_discreet): New method.
	(Exporter.set_flag_additional_category): Ditto.

2003-03-06  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in (RepeatPattern.Period.get_duration): Return 60 * 24
	minutes if either @edate or @sdate is nil.  Support `-s' option.
	(MhcScheduleItem.to_outlook): Assumu NonRepeat if either time_b or
	time_e is valid.
	(Exporter.setup_ol_appointments): Get duration with period
	.get_duration().
	(Exporter.setup_ol_appointments): Don't set a reminder is any
	alarms are not set.
	(Exporter.setup_ol_appointments): Don't save an appointment with
	`-s' option.
	(Exporter.setup_ol_appointments): Don't set a reminder to a task.
	(Exporter.delete_unmanaged_schedules): Don't delete schedules with
	`-n' option. Thanks to Toshihiko SHIMOKAWA
	<toshi@is.kyusan-u.ac.jp>.
	(Exporter.write_sync_info): Don't update sync_info with `-n'
	option.
	(Exporter.delete_ol_schedules): Don't delete Outlook appointments
	with `-n' option.
	($flag_separation): New varialbes.
	Initialize Outlook even if `-n' option is specified.
	
2003-02-26  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in (RepeatPattern): Add instance varialbes for start time
	and end time.
	(RepeatPattern::get_recurrence): New method.
	(MhcScheduleItem::to_outlook): Set AllDayEvent flag if both of
	stime and etime are not nil.

2003-02-24  Yoshinari NOMURA  <nom@quickhack.net>
