@@ -28,14 +28,15 @@
       ".*[^\006\n]+\006 \\+\\([^ ]*\\) \\([0-9]+\\)$"
     ".*\r *\\+\\([^ \t]+\\)[ \t]+\\([^ \t\n]+\\)"))
 
+;; Mew 4.x or later use invisible property at (beginning-of-line)
 (defconst mhc-mew/header-string
   (let ((str "0 | "))
-    (put-text-property 0 (length str) 'invisible t str)
+    (put-text-property 0 (length str) 'invisible 'mhc str)
     str))
 
 (defconst mhc-mew/header-string-review
   (let ((str (concat "0" (char-to-string mew-mark-review) "| ")))
-    (put-text-property 0 (length str) 'invisible t str)
+    (put-text-property 0 (length str) 'invisible 'mhc str)
     str))
 
 (defconst mhc-mew/summary-message-alist
@@ -165,6 +166,9 @@
   ;; Mew-1.95b104 or later, disable mark highlight
   (when (boundp 'mew-summary-buffer-raw) 
     (setq mew-summary-buffer-raw nil))
+  ;; Mew 4.x or later
+  (when (fboundp 'mew-summary-set-count-line)
+    (mew-summary-set-count-line))
   (mew-summary-toggle-disp-msg 'off))
 
 
